--- a/.gitignore
+++ b/.gitignore
@@ -185,3 +185,4 @@ Grafismos/Mapa/Dados/mapa.tiled-session
 *.tiled-session
 *.tiled-session
 *.tiled-session
+Grafismos/Mapa/Dados/mapa.tiled-session
