--- a/.gitignore
+++ b/.gitignore
@@ -183,3 +183,4 @@ cython_debug/
 .tiled-session
 Grafismos/Mapa/Dados/mapa.tiled-session
 Grafismos/Mapa/Dados/mapa.tiled-session
+Grafismos/Mapa/Dados/mapa.tiled-session
