--- a/.gitignore
+++ b/.gitignore
@@ -184,3 +184,4 @@ cython_debug/
 Grafismos/Mapa/Dados/mapa.tiled-session
 Grafismos/Mapa/Dados/mapa.tiled-session
 Grafismos/Mapa/Dados/mapa.tiled-session
+*.tiled-session
